--- a/second-project-s3-lambda/package.json
+++ b/second-project-s3-lambda/package.json
@@ -21,6 +21,7 @@
     "typescript": "~5.6.3"
   },
   "dependencies": {
+    "@aws-sdk/client-secrets-manager": "^3.844.0",
     "aws-cdk-lib": "2.202.0",
     "constructs": "^10.0.0",
     "esbuild": "^0.25.6"
